--- a/pixel3Dapp/vue_project/public/index.html
+++ b/pixel3Dapp/vue_project/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://unpkg.com/earcut@2.1.5/dist/earcut.min.js"></script>
     <title>3D Pixel Art Generator </title>
   </head>
   <body class="w3-theme-light">
